{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 162,
  "lineage": "74246804-6f86-5721-22cd-16e8bf1f88f2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "three_tier_nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e9d2523b6feeb998",
            "domain": "vpc",
            "id": "eipalloc-0e9d2523b6feeb998",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-158-2-178.compute-1.amazonaws.com",
            "public_ip": "54.158.2.178",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "three_tier_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:447131659068:internet-gateway/igw-05a664bbfcd1b13db",
            "id": "igw-05a664bbfcd1b13db",
            "owner_id": "447131659068",
            "tags": {
              "Name": "three_tier_igw"
            },
            "tags_all": {
              "Name": "three_tier_igw"
            },
            "vpc_id": "vpc-089c51810a05df65b"
          },
          "dependencies": [
            "aws_vpc.three_tier_vpc",
            "random_integer.random"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "three_tier_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:447131659068:loadbalancer/app/three-tier-loadbalancer/0eb6286445b813c8",
            "arn_suffix": "app/three-tier-loadbalancer/0eb6286445b813c8",
            "desync_mitigation_mode": "defensive",
            "dns_name": "three-tier-loadbalancer-1306414224.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:447131659068:loadbalancer/app/three-tier-loadbalancer/0eb6286445b813c8",
            "idle_timeout": 400,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "three-tier-loadbalancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-010668fb7490e8ad8"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-08c639596e197dc6c"
              },
              {
                "subnet_id": "subnet-0e669811fa533edf5"
              },
              {
                "subnet_id": "subnet-0f9cb4dc8e6a8ccb5"
              }
            ],
            "subnets": [
              "subnet-08c639596e197dc6c",
              "subnet-0e669811fa533edf5",
              "subnet-0f9cb4dc8e6a8ccb5"
            ],
            "vpc_id": "vpc-089c51810a05df65b",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.three_tier_lb_sg",
            "aws_subnet.three_tier_public_subnets",
            "aws_vpc.three_tier_vpc",
            "data.aws_availability_zones.available",
            "random_integer.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "three_tier_lb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:447131659068:listener/app/three-tier-loadbalancer/0eb6286445b813c8/67363bc970e7fe9a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:447131659068:targetgroup/three-tier-lb-tg-0b3/4cc739e575b6b0d7",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:447131659068:listener/app/three-tier-loadbalancer/0eb6286445b813c8/67363bc970e7fe9a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:447131659068:loadbalancer/app/three-tier-loadbalancer/0eb6286445b813c8",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.three_tier_lb",
            "aws_lb_target_group.three_tier_tg",
            "aws_security_group.three_tier_lb_sg",
            "aws_subnet.three_tier_public_subnets",
            "aws_vpc.three_tier_vpc",
            "data.aws_availability_zones.available",
            "random_integer.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "three_tier_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:447131659068:targetgroup/three-tier-lb-tg-0b3/4cc739e575b6b0d7",
            "arn_suffix": "targetgroup/three-tier-lb-tg-0b3/4cc739e575b6b0d7",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:447131659068:targetgroup/three-tier-lb-tg-0b3/4cc739e575b6b0d7",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "three-tier-lb-tg-0b3",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-089c51810a05df65b"
          },
          "dependencies": [
            "aws_vpc.three_tier_vpc",
            "random_integer.random"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "three_tier_ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e9d2523b6feeb998",
            "connectivity_type": "public",
            "id": "nat-0cd8053eac49594a4",
            "network_interface_id": "eni-091cd2cfb01046244",
            "private_ip": "10.100.11.104",
            "public_ip": "54.158.2.178",
            "subnet_id": "subnet-0e669811fa533edf5"
          },
          "dependencies": [
            "aws_eip.three_tier_nat_eip",
            "aws_subnet.three_tier_public_subnets",
            "aws_vpc.three_tier_vpc",
            "data.aws_availability_zones.available",
            "random_integer.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "default_private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d401c9ceeb5c02ab1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0cd8053eac49594a4",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d401c9ceeb5c02ab",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.three_tier_nat_eip",
            "aws_nat_gateway.three_tier_ngw",
            "aws_route_table.three_tier_private_rt",
            "aws_subnet.three_tier_public_subnets",
            "aws_vpc.three_tier_vpc",
            "data.aws_availability_zones.available",
            "random_integer.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "default_public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-05a664bbfcd1b13db",
            "id": "r-rtb-06e028943c29eb9321080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06e028943c29eb932",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.three_tier_internet_gateway",
            "aws_route_table.three_tier_public_rt",
            "aws_vpc.three_tier_vpc",
            "random_integer.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "three_tier_private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:447131659068:route-table/rtb-0d401c9ceeb5c02ab",
            "id": "rtb-0d401c9ceeb5c02ab",
            "owner_id": "447131659068",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "three_tier_private"
            },
            "tags_all": {
              "Name": "three_tier_private"
            },
            "timeouts": null,
            "vpc_id": "vpc-089c51810a05df65b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.three_tier_vpc",
            "random_integer.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "three_tier_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:447131659068:route-table/rtb-06e028943c29eb932",
            "id": "rtb-06e028943c29eb932",
            "owner_id": "447131659068",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "three_tier_public"
            },
            "tags_all": {
              "Name": "three_tier_public"
            },
            "timeouts": null,
            "vpc_id": "vpc-089c51810a05df65b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.three_tier_vpc",
            "random_integer.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "three_tier_private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0726b285a5177580d",
            "route_table_id": "rtb-0d401c9ceeb5c02ab",
            "subnet_id": "subnet-01b0a2977bb8f52e9"
          },
          "dependencies": [
            "aws_route_table.three_tier_private_rt",
            "aws_subnet.three_tier_private_subnets",
            "aws_vpc.three_tier_vpc",
            "data.aws_availability_zones.available",
            "random_integer.random"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fc6f86659c9d7b8b",
            "route_table_id": "rtb-0d401c9ceeb5c02ab",
            "subnet_id": "subnet-08a6bf2f22160e69c"
          },
          "dependencies": [
            "aws_route_table.three_tier_private_rt",
            "aws_subnet.three_tier_private_subnets",
            "aws_vpc.three_tier_vpc",
            "data.aws_availability_zones.available",
            "random_integer.random"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08cbcfaadd5cbc75a",
            "route_table_id": "rtb-0d401c9ceeb5c02ab",
            "subnet_id": "subnet-0a624c2dcece76a90"
          },
          "dependencies": [
            "aws_route_table.three_tier_private_rt",
            "aws_subnet.three_tier_private_subnets",
            "aws_vpc.three_tier_vpc",
            "data.aws_availability_zones.available",
            "random_integer.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "three_tier_public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e1ecd90a7bd70e0e",
            "route_table_id": "rtb-06e028943c29eb932",
            "subnet_id": "subnet-0f9cb4dc8e6a8ccb5"
          },
          "dependencies": [
            "aws_route_table.three_tier_public_rt",
            "aws_subnet.three_tier_public_subnets",
            "aws_vpc.three_tier_vpc",
            "data.aws_availability_zones.available",
            "random_integer.random"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ad7cc9678742769e",
            "route_table_id": "rtb-06e028943c29eb932",
            "subnet_id": "subnet-0e669811fa533edf5"
          },
          "dependencies": [
            "aws_route_table.three_tier_public_rt",
            "aws_subnet.three_tier_public_subnets",
            "aws_vpc.three_tier_vpc",
            "data.aws_availability_zones.available",
            "random_integer.random"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0505c03f5d77e20a4",
            "route_table_id": "rtb-06e028943c29eb932",
            "subnet_id": "subnet-08c639596e197dc6c"
          },
          "dependencies": [
            "aws_route_table.three_tier_public_rt",
            "aws_subnet.three_tier_public_subnets",
            "aws_vpc.three_tier_vpc",
            "data.aws_availability_zones.available",
            "random_integer.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "three_tier_backend_app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:447131659068:security-group/sg-06201224c07a836d0",
            "description": "Allow Inbound HTTP from FRONTEND APP, and SSH inbound traffic from Bastion",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06201224c07a836d0",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-071401bb37675ba5f"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03816316cfd390573"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "three_tier_backend_app_sg",
            "name_prefix": "",
            "owner_id": "447131659068",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-089c51810a05df65b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.three_tier_bastion_sg",
            "aws_security_group.three_tier_frontend_app_sg",
            "aws_security_group.three_tier_lb_sg",
            "aws_vpc.three_tier_vpc",
            "random_integer.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "three_tier_bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:447131659068:security-group/sg-071401bb37675ba5f",
            "description": "Allow SSH Inbound Traffic From Set IP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-071401bb37675ba5f",
            "ingress": [
              {
                "cidr_blocks": [
                  "34.224.95.27/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "three_tier_bastion_sg",
            "name_prefix": "",
            "owner_id": "447131659068",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-089c51810a05df65b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.three_tier_vpc",
            "random_integer.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "three_tier_frontend_app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:447131659068:security-group/sg-03816316cfd390573",
            "description": "Allow SSH inbound traffic from Bastion, and HTTP inbound traffic from loadbalancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03816316cfd390573",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-071401bb37675ba5f"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-010668fb7490e8ad8"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "three_tier_frontend_app_sg",
            "name_prefix": "",
            "owner_id": "447131659068",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-089c51810a05df65b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.three_tier_bastion_sg",
            "aws_security_group.three_tier_lb_sg",
            "aws_vpc.three_tier_vpc",
            "random_integer.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "three_tier_lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:447131659068:security-group/sg-010668fb7490e8ad8",
            "description": "Allow Inbound HTTP Traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-010668fb7490e8ad8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "three_tier_lb_sg",
            "name_prefix": "",
            "owner_id": "447131659068",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-089c51810a05df65b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.three_tier_vpc",
            "random_integer.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "three_tier_private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:447131659068:subnet/subnet-01b0a2977bb8f52e9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.100.20.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01b0a2977bb8f52e9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "447131659068",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "three_tier_private_1"
            },
            "tags_all": {
              "Name": "three_tier_private_1"
            },
            "vpc_id": "vpc-089c51810a05df65b"
          },
          "dependencies": [
            "aws_vpc.three_tier_vpc",
            "data.aws_availability_zones.available",
            "random_integer.random"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:447131659068:subnet/subnet-08a6bf2f22160e69c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.100.21.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08a6bf2f22160e69c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "447131659068",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "three_tier_private_2"
            },
            "tags_all": {
              "Name": "three_tier_private_2"
            },
            "vpc_id": "vpc-089c51810a05df65b"
          },
          "dependencies": [
            "aws_vpc.three_tier_vpc",
            "data.aws_availability_zones.available",
            "random_integer.random"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:447131659068:subnet/subnet-0a624c2dcece76a90",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.100.22.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a624c2dcece76a90",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "447131659068",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "three_tier_private_3"
            },
            "tags_all": {
              "Name": "three_tier_private_3"
            },
            "vpc_id": "vpc-089c51810a05df65b"
          },
          "dependencies": [
            "aws_vpc.three_tier_vpc",
            "data.aws_availability_zones.available",
            "random_integer.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "three_tier_public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:447131659068:subnet/subnet-0f9cb4dc8e6a8ccb5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.100.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f9cb4dc8e6a8ccb5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "447131659068",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "three_tier_public_1"
            },
            "tags_all": {
              "Name": "three_tier_public_1"
            },
            "vpc_id": "vpc-089c51810a05df65b"
          },
          "dependencies": [
            "aws_vpc.three_tier_vpc",
            "data.aws_availability_zones.available",
            "random_integer.random"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:447131659068:subnet/subnet-0e669811fa533edf5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.100.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e669811fa533edf5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "447131659068",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "three_tier_public_2"
            },
            "tags_all": {
              "Name": "three_tier_public_2"
            },
            "vpc_id": "vpc-089c51810a05df65b"
          },
          "dependencies": [
            "aws_vpc.three_tier_vpc",
            "data.aws_availability_zones.available",
            "random_integer.random"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:447131659068:subnet/subnet-08c639596e197dc6c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.100.12.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08c639596e197dc6c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "447131659068",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "three_tier_public_3"
            },
            "tags_all": {
              "Name": "three_tier_public_3"
            },
            "vpc_id": "vpc-089c51810a05df65b"
          },
          "dependencies": [
            "aws_vpc.three_tier_vpc",
            "data.aws_availability_zones.available",
            "random_integer.random"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "three_tier_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:447131659068:vpc/vpc-089c51810a05df65b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.100.0.0/16",
            "default_network_acl_id": "acl-05c07a2c1c09d8265",
            "default_route_table_id": "rtb-01d6b79945898b582",
            "default_security_group_id": "sg-09615b87cab77bb90",
            "dhcp_options_id": "dopt-051373dfc292d968e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-089c51810a05df65b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01d6b79945898b582",
            "owner_id": "447131659068",
            "tags": {
              "Name": "three_tier_vpc-71"
            },
            "tags_all": {
              "Name": "three_tier_vpc-71"
            }
          },
          "dependencies": [
            "random_integer.random"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}